5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_2703.log
== TEST (2019-04-04 21:27:54) 
-- CODE:
idade=int(input("idade:"))

if (idade>18):
	a=(nao_eleitor)
else:
	a=(eleitor)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a=(eleitor)
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:28:27) 
-- CODE:
idade=int(input("idade:"))

if (idade>18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:28:57) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:29:04) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:29:13) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:29:22) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:29:35) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- EXECUTION TIME:
0.195774
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:31:28) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- EXECUTION TIME:
0.149456
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:30:03) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- EXECUTION TIME:
0.142782
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:36:25) 
-- CODE:
idade=int(input("idade:"))

if (idade<18):
	a=("nao_eleitor")
else:
	a=("eleitor")

print(a)
-- EXECUTION TIME:
0.189184
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
